--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = marc-solr-profiling
 
-{<img src="https://secure.travis-ci.org/solrmarc/marc-solr-profiling.png" alt="Build Status" />}[http://travis-ci.org/solrmarc/marc-solr-profiling]
+{<img src="https://secure.travis-ci.org/solrmarc/marc-solr-profiling.png?branch=master" alt="Build Status" />}[http://travis-ci.org/solrmarc/marc-solr-profiling]
 
 This is a FORK of the SolrMarc** project;  it is streamlined for the single
 purpose of profiling Marc data with a Solr index.
